app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vdryzheruk-argocd-demo
spec:
  replicas: 10
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: vdryzheruk-argocd-demo
  template:
    metadata:
      labels:
        app: vdryzheruk-argocd-demo
    spec:
      containers:
      - image: httpd
        name: vdryzheruk-argocd-demo
        ports:
        - containerPort: 80
