app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vdryzheruk-argocd-demo
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: vdryzheruk-argocd-demo
